EDELIVERY-1471 - refactoring